// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`comments 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "props": Array [
        Object {
          "description": "* Comment
  * asdf
      asdf
  
Comment2",
          "key": "foo",
          "kind": "property",
          "leadingComments": Array [
            Object {
              "end": 54,
              "loc": SourceLocation {
                "end": Position {
                  "column": 4,
                  "line": 6,
                },
                "start": Position {
                  "column": 2,
                  "line": 3,
                },
              },
              "start": 18,
              "type": "CommentBlock",
              "value": "* Comment
  * asdf
      asdf
  ",
            },
            Object {
              "end": 68,
              "loc": SourceLocation {
                "end": Position {
                  "column": 13,
                  "line": 7,
                },
                "start": Position {
                  "column": 2,
                  "line": 7,
                },
              },
              "start": 57,
              "type": "CommentLine",
              "value": " Comment2",
            },
          ],
          "optional": false,
          "value": Object {
            "kind": "boolean",
          },
        },
      ],
    },
  ],
  "kind": "program",
}
`;

exports[`flow any 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "props": Array [
        Object {
          "key": "age",
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "any",
          },
        },
      ],
    },
  ],
  "kind": "program",
}
`;

exports[`flow array 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "props": Array [
        Object {
          "key": "foo",
          "kind": "property",
          "optional": false,
          "value": undefined,
        },
      ],
    },
  ],
  "kind": "program",
}
`;

exports[`flow array union 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "props": Array [
        Object {
          "key": "foo",
          "kind": "property",
          "optional": false,
          "value": undefined,
        },
      ],
    },
  ],
  "kind": "program",
}
`;

exports[`flow boolean 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "props": Array [
        Object {
          "key": "foo",
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "boolean",
          },
        },
      ],
    },
  ],
  "kind": "program",
}
`;

exports[`flow different React component 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "props": Array [
        Object {
          "key": "foo",
          "kind": "property",
          "optional": true,
          "value": Object {
            "kind": "number",
          },
        },
      ],
    },
    Object {
      "kind": "object",
      "props": Array [
        Object {
          "key": "foo",
          "kind": "property",
          "optional": true,
          "value": Object {
            "kind": "number",
          },
        },
      ],
    },
  ],
  "kind": "program",
}
`;

exports[`flow exported type alias reference 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "props": Array [
        Object {
          "key": "foo",
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "boolean",
          },
        },
      ],
    },
  ],
  "kind": "program",
}
`;

exports[`flow function 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "props": Array [
        Object {
          "key": "foo",
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "function",
            "parameters": Array [
              Object {
                "kind": "string",
              },
              Object {
                "kind": "number",
              },
            ],
            "returnType": Object {
              "kind": "string",
            },
          },
        },
      ],
    },
  ],
  "kind": "program",
}
`;

exports[`flow function named params 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "props": Array [
        Object {
          "key": "foo",
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "function",
            "parameters": Array [
              Object {
                "kind": "string",
              },
              Object {
                "kind": "number",
              },
            ],
            "returnType": Object {
              "kind": "void",
            },
          },
        },
      ],
    },
  ],
  "kind": "program",
}
`;

exports[`flow function return type 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "props": Array [
        Object {
          "key": "foo",
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "function",
            "parameters": Array [
              Object {
                "kind": "number",
              },
            ],
            "returnType": Object {
              "kind": "void",
            },
          },
        },
      ],
    },
  ],
  "kind": "program",
}
`;

exports[`flow function type 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "props": Array [
        Object {
          "key": "foo",
          "kind": "property",
          "optional": false,
          "value": undefined,
        },
      ],
    },
  ],
  "kind": "program",
}
`;

exports[`flow function unnamed params 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "props": Array [
        Object {
          "key": "foo",
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "function",
            "parameters": Array [
              Object {
                "kind": "string",
              },
              Object {
                "kind": "number",
              },
            ],
            "returnType": Object {
              "kind": "void",
            },
          },
        },
      ],
    },
  ],
  "kind": "program",
}
`;

exports[`flow function unnamed params w/ object 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "props": Array [
        Object {
          "key": "foo",
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "function",
            "parameters": Array [
              Object {
                "kind": "object",
                "props": Array [
                  Object {
                    "key": "prop",
                    "kind": "property",
                    "optional": false,
                    "value": Object {
                      "kind": "string",
                    },
                  },
                ],
              },
            ],
            "returnType": Object {
              "kind": "void",
            },
          },
        },
      ],
    },
  ],
  "kind": "program",
}
`;

exports[`flow generic class 1`] = `
Object {
  "classes": Array [
    undefined,
  ],
  "kind": "program",
}
`;

exports[`flow import { type } 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "props": Array [
        Object {
          "key": "children",
          "kind": "property",
          "optional": false,
          "value": Object {
            "importKind": "type",
            "kind": "import",
            "moduleSpecifier": "react",
            "name": "Node",
          },
        },
      ],
    },
  ],
  "kind": "program",
}
`;

exports[`flow maybe 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "props": Array [
        Object {
          "key": "foo",
          "kind": "property",
          "optional": false,
          "value": Object {
            "arguments": Object {
              "kind": "string",
            },
            "kind": "nullable",
          },
        },
      ],
    },
  ],
  "kind": "program",
}
`;

exports[`flow mixed 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "props": Array [
        Object {
          "key": "age",
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "mixed",
          },
        },
      ],
    },
  ],
  "kind": "program",
}
`;

exports[`flow no React component 1`] = `
Object {
  "classes": Array [],
  "kind": "program",
}
`;

exports[`flow number 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "props": Array [
        Object {
          "key": "foo",
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "number",
          },
        },
      ],
    },
  ],
  "kind": "program",
}
`;

exports[`flow optional 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "props": Array [
        Object {
          "key": "foo",
          "kind": "property",
          "optional": true,
          "value": Object {
            "kind": "number",
          },
        },
      ],
    },
  ],
  "kind": "program",
}
`;

exports[`flow string 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "props": Array [
        Object {
          "key": "foo",
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "string",
          },
        },
      ],
    },
  ],
  "kind": "program",
}
`;

exports[`flow type 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "props": Array [
        Object {
          "key": "foo",
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "number",
          },
        },
        Object {
          "key": "bar",
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "boolean",
          },
        },
      ],
    },
  ],
  "kind": "program",
}
`;

exports[`flow type 2`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "props": Array [
        Object {
          "key": "foo",
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "intersection",
            "types": Array [
              Object {
                "kind": "number",
              },
              Object {
                "kind": "string",
              },
            ],
          },
        },
      ],
    },
  ],
  "kind": "program",
}
`;

exports[`flow type identifier 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "props": Array [
        Object {
          "key": "children",
          "kind": "property",
          "optional": false,
          "value": undefined,
        },
      ],
    },
  ],
  "kind": "program",
}
`;

exports[`flow union 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "props": Array [
        Object {
          "key": "foo",
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "union",
            "types": Array [
              Object {
                "kind": "boolean",
              },
              Object {
                "kind": "number",
              },
            ],
          },
        },
      ],
    },
  ],
  "kind": "program",
}
`;

exports[`flow union literals 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "props": Array [
        Object {
          "key": "age",
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "union",
            "types": Array [
              Object {
                "kind": "stringLiteral",
                "value": "25",
              },
              Object {
                "kind": "numberLiteral",
              },
            ],
          },
        },
      ],
    },
  ],
  "kind": "program",
}
`;

exports[`flow void 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "props": Array [
        Object {
          "key": "foo",
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "void",
          },
        },
      ],
    },
  ],
  "kind": "program",
}
`;

exports[`ts any 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "props": Array [
        Object {
          "kind": "any",
        },
      ],
    },
  ],
  "kind": "program",
}
`;

exports[`ts array 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "props": Array [
        undefined,
      ],
    },
  ],
  "kind": "program",
}
`;

exports[`ts boolean 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "props": Array [
        Object {
          "kind": "boolean",
        },
      ],
    },
  ],
  "kind": "program",
}
`;

exports[`ts different React components 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "props": Array [
        Object {
          "kind": "void",
        },
      ],
    },
    Object {
      "kind": "object",
      "props": Array [
        Object {
          "kind": "void",
        },
      ],
    },
  ],
  "kind": "program",
}
`;

exports[`ts enum 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "props": Array [
        undefined,
      ],
    },
  ],
  "kind": "program",
}
`;

exports[`ts function 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "props": Array [
        Object {
          "kind": "function",
          "parameters": Array [
            undefined,
            undefined,
          ],
          "returnType": Object {
            "kind": "number",
          },
        },
      ],
    },
  ],
  "kind": "program",
}
`;

exports[`ts interface 1`] = `
Object {
  "classes": Array [
    undefined,
  ],
  "kind": "program",
}
`;

exports[`ts literals 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "props": Array [
        Object {
          "kind": "union",
          "types": Array [
            Object {
              "kind": "literal",
              "value": "25",
            },
            Object {
              "kind": "literal",
              "value": 30,
            },
          ],
        },
      ],
    },
  ],
  "kind": "program",
}
`;

exports[`ts no react component 1`] = `
Object {
  "classes": Array [],
  "kind": "program",
}
`;

exports[`ts object 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "props": Array [
        Object {
          "kind": "object",
          "props": Array [
            Object {
              "kind": "string",
            },
          ],
        },
        Object {
          "kind": "number",
        },
        Object {
          "kind": "boolean",
        },
      ],
    },
  ],
  "kind": "program",
}
`;

exports[`ts optional 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "props": Array [
        Object {
          "kind": "string",
        },
      ],
    },
  ],
  "kind": "program",
}
`;

exports[`ts string 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "props": Array [
        Object {
          "kind": "string",
        },
      ],
    },
  ],
  "kind": "program",
}
`;

exports[`ts tuple 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "props": Array [
        Object {
          "kind": "tuple",
          "types": Array [
            Object {
              "kind": "string",
            },
            Object {
              "kind": "number",
            },
          ],
        },
      ],
    },
  ],
  "kind": "program",
}
`;

exports[`ts union 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "props": Array [
        Object {
          "kind": "union",
          "types": Array [
            Object {
              "kind": "number",
            },
            Object {
              "kind": "string",
            },
          ],
        },
      ],
    },
  ],
  "kind": "program",
}
`;

exports[`ts void 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "props": Array [
        Object {
          "kind": "void",
        },
      ],
    },
  ],
  "kind": "program",
}
`;
